fixed layout issues for what page

--- a/css/what.css
+++ b/css/what.css
@@ -4,10 +4,6 @@ body {
   color: rgb(255, 255, 255);
 }
 
-.container .text {
-  float: left;
-}
-
 .element {
   float: left;
 }
@@ -17,6 +13,10 @@ body {
   width: 487px;
   height: 383px;
   background-color: rgb(230, 230, 230);
+}
+
+.element .text {
+  position: absolute;
 }
 
 .text-2 p {
@@ -63,7 +63,7 @@ body {
 }
 
 .container-3 {
-  width: 1165px;
+  width: 100%;
   height: 190px;
   margin: 0 auto;
 }
@@ -73,7 +73,7 @@ body {
   float: left;
   clear: both;
   z-index: 25;
-  width: 1165px;
+  width: 100%;
   height: 190px;
 }
 
@@ -94,6 +94,7 @@ body {
   height: 383px;
   margin-top: 75px;
   background-color: rgba(0, 0, 0, 0.2);
+  overflow: scroll;
 }
 
 .element-10 {
@@ -207,7 +208,6 @@ body {
 }
 
 .text-1 {
-  position: absolute;
   top: 252px;
   left: 61px;
   z-index: 2;
@@ -218,6 +218,7 @@ body {
 
 .text-10 {
   position: relative;
+  float: left;
   z-index: 19;
   width: 390px;
   margin: -37px 0 0 26.41339%;
@@ -237,7 +238,6 @@ body {
 }
 
 .text-2 {
-  position: absolute;
   top: 57px;
   left: 61px;
   z-index: 1;
@@ -247,7 +247,6 @@ body {
 }
 
 .text-3 {
-  position: absolute;
   top: 0;
   bottom: 0;
   left: 537px;
@@ -263,17 +262,22 @@ body {
 }
 
 .text-4 {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 6;
   width: 100px;
-  height: 72px;
-  margin-top: 24px;
-  font-family: PierSans;
-  font-size: 1.96em;
+  margin: auto;
+  padding-top: 31px;
+  font: 1.96em/1 PierSans;
   text-align: center;
   color: rgb(100, 186, 80);
 }
 
 .text-5 {
   position: relative;
+  float: left;
   z-index: 8;
   width: 46.398503274%;
   margin: 66px 0 0 42px;
@@ -284,16 +288,21 @@ body {
 }
 
 .text-6 {
-  width: 99px;
-  height: 72px;
-  margin-top: 22px;
-  font-family: PierSans;
-  font-size: 1.96em;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 22;
+  width: 100px;
+  margin: auto;
+  padding-top: 30px;
+  font: 1.96em/1 PierSans;
   text-align: center;
   color: rgb(100, 186, 80);
 }
 
 .text-7 {
+  float: left;
   width: 589px;
   margin: 66px 0 0 42px;
   font-family: 'Pier Sans';
@@ -304,6 +313,7 @@ body {
 
 .text-8 {
   position: relative;
+  float: left;
   clear: both;
   z-index: 15;
   width: 55.5123216601%;
@@ -314,9 +324,10 @@ body {
 
 .text-9 {
   position: relative;
+  float: left;
   z-index: 17;
-  width: 55.5123216601%;
-  margin: -142px 0 0 26.41339%;
+  width: 53.7634408602%;
+  margin: -154px 0 0 26.41339%;
   font-size: 1em;
   color: rgb(255, 255, 255);
 }
@@ -450,8 +461,18 @@ body {
     margin-top: auto;
     margin-bottom: auto;
     padding-top: 22px;
+    padding-right: 10px;
     border-left-width: 0;
     border-left-style: none;
+  }
+
+  .element .text-4,
+  .element .text-6 {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
   }
 
   .element-1 {
@@ -561,6 +582,15 @@ body {
     margin-top: auto;
     margin-bottom: auto;
     font-size: 0.8em;
+  }
+
+  .element .text-4,
+  .element .text-6 {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
   }
 
   .element-1 {
